# nidarholmjs

./: .babelrc  .dockerignore  .eslintrc  .eslintrc.json  .flowconfig  .gitignore  .gitlab-ci.yml  .groc.json  .travis.yml  Cargo.toml  Dockerfile  Gruntfile.js  Makefile  README.md  Vagrantfile  bower.json  build.sh  cluster.js  container-nidarholm-web.service  debug.js  gulpfile.babel.js  nidarholm-database.service  nidarholm-web.service  nodemon.json  package.json  tsconfig.json  webpack.config.js  webpack.prod.config.js
ansible/: config.production.js.j2  deploy.yml  nginx.http.j2  nginx.https.j2  service.j2  setup.yml
ansible/inventory/: production  vagrant.py
client/css/: _settings.scss  styles.scss
client/js/: base.js  files.js  forum.js  groups.js  index.js  organization.js  projects.js  user.js
client/scss/: _settings.scss  styles.scss
config/: default.js  development.js  test.js
convert/: README  avatars.js  events.js  files-activities.js  files.js  forum-activities.js  forum-news.js  forum-posts.js  forum-replies.js  forum.js  groups.js  lib.js  news.js  pieces.js  projects.js  todo.txt  users.js
cypress/integration/: contact-users.spec.ts  project-create-and-delete.spec.ts
mailman-sync/: .gitlab-ci.yml  Cargo.toml  Dockerfile
mailman-sync/src/: main.rs
mailman-sync/src/api/: database.rs  mailman.rs  nidarholm.rs
noteeksport/: Cargo.toml
noteeksport/src/: main.rs
scripts/: build-schema.js  build-schema.ts  lowercase_usernames.js  nidarholm_lists.py  nidarholm_roles.py  settings.example.json
server/: app.js  settings.example.js
setup/: build.yml  config.production.js.j2  deploy.yml  inventory  nginx.conf  nginx.http.j2  nginx.https.j2  nidarholm.nginx.j2  nidarholm.service.j2  service.j2  supervisor.conf
src/: client.js  client.tsx  config.ts  dev.js  dev.ts  fetcher.js  main.rs  router.js  router.tsx  sw.js  util.ts
test/: example.js  files.js  forum.js  group.js  member.js  normalize.js  organization.js  permissions.js  projects.js  register.js  select-permission.js  slug.js  suite.js  user.js
(+466 files in other folders)
