[package]
name = "nidarholm-mailman-sync"
version = "0.1.0"
authors = ["Sigurd Gartmann <sigurdga@sigurdga.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.4"
bson = "0.14"
reqwest = "0.9"
serde = { version ="1.0", features = ["derive"] }
serde_json = "1.0"