[package]
name = "nidarholm-mailman-sync"
version = "0.1.0"
authors = ["Sigurd Gartmann <sigurdga@sigurdga.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14"
env_logger = "0.7.0"
futures = "0.3"
log = "0.4.8"
mongodb = { version = "2.1" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
