[package]
name = "noteeksport"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1.1.6"
dotenv = "0.15.0"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
mongodb={version = "2.3", features=["bson-chrono-0_4", "bson-serde_with", "openssl-tls"]}
rust-s3 = "0.32.3"
serde = {version = "1.0", features=["derive"]}
serde_with = "1"
tokio ={version="1.8", features=["full"]}
sha2 = "0.10"
base16ct = {version="0.1", features=["alloc"]}
zip = "0.6.2"
